[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Nodes/Scripts/ResponseNode.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 148.5, 87 )

[node name="PlayerResponseNode" type="GraphNode" groups=["Response_Nodes"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -50.0
margin_right = 125.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 180 )
mouse_filter = 1
title = "Response Node"
show_close = true
comment = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 0, 1, 0, 1 )
slot/0/right_enabled = true
slot/0/right_type = 3
slot/0/right_color = Color( 0, 0, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
_response_text_node_path = NodePath("HBoxContainer/VBoxContainer/ResponseText")
_color_picker_node_path = NodePath("HBoxContainer/VBoxContainer/ColorPickerButton")
_option_type_node_path = NodePath("HBoxContainer/VBoxContainer/OptionTypeButton")
_command_text_node_path = NodePath("HBoxContainer/VBoxContainer/CommandText")
_new_dialog_button_path = NodePath("HBoxContainer/AddNewDialog")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 284.0
margin_bottom = 107.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 83.0

[node name="ResponseText" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 35 )
wrap_enabled = true

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 200.0
margin_bottom = 59.0
size_flags_vertical = 0
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="OptionTypeButton" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 200.0
margin_bottom = 83.0
text = "Dialog"
align = 1
items = [ "Dialog", null, false, 1, null, "Open Role Screen", null, false, 3, null, "Execute Command", null, false, 4, null, "Close Dialog", null, false, 0, null, "Disabled", null, false, 4, null ]
selected = 0

[node name="CommandText" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 77.0
margin_right = 200.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 25 )
text = "Command"

[node name="AddNewDialog" type="Button" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 254.0
margin_bottom = 83.0
rect_min_size = Vector2( 50, 50 )
text = "+"

[node name="VBOXRemoteConnection" type="VBoxContainer" parent="."]
visible = false
margin_left = 16.0
margin_top = 108.0
margin_right = 284.0
margin_bottom = 172.0

[node name="ConnectedLabel" type="Label" parent="VBOXRemoteConnection"]
margin_right = 268.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Connected to DialogTitle | Node 56"
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBOXRemoteConnection"]
margin_top = 44.0
margin_right = 268.0
margin_bottom = 64.0

[node name="DisconnectButton" type="Button" parent="VBOXRemoteConnection/HBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Disconnect"

[node name="VSeparator" type="VSeparator" parent="VBOXRemoteConnection/HBoxContainer"]
margin_left = 88.0
margin_right = 148.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )

[node name="JumpButton" type="Button" parent="VBOXRemoteConnection/HBoxContainer"]
margin_left = 152.0
margin_right = 253.0
margin_bottom = 20.0
text = "Jump To Node"

[node name="ResponseNodeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResponseNodeArea"]
position = Vector2( 150.5, 90 )
shape = SubResource( 1 )

[connection signal="close_request" from="." to="." method="_on_PlayerResponseNode_close_request"]
[connection signal="dragged" from="." to="." method="_on_PlayerResponseNode_dragged"]
[connection signal="gui_input" from="." to="." method="_on_PlayerResponseNode_gui_input"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/ResponseText" to="." method="_on_ResponseText_text_changed"]
[connection signal="color_changed" from="HBoxContainer/VBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/OptionTypeButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/CommandText" to="." method="_on_CommandText_text_changed"]
[connection signal="pressed" from="HBoxContainer/AddNewDialog" to="." method="_on_AddNewDialog_pressed"]
[connection signal="pressed" from="VBOXRemoteConnection/HBoxContainer/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
[connection signal="pressed" from="VBOXRemoteConnection/HBoxContainer/JumpButton" to="." method="_on_JumpButton_pressed"]
[connection signal="area_entered" from="ResponseNodeArea" to="." method="_on_ResponseNodeArea_area_entered"]
[connection signal="area_exited" from="ResponseNodeArea" to="." method="_on_ResponseNodeArea_area_exited"]
